--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<main>
+<main class="container">
   <!-- ===============Header Description=============== -->
   <header>
     <p>Reliable, efficient delivery</p>
@@ -20,37 +20,34 @@
   </header>
 
 <!-- ===============Skills Container=============== -->
-  <section id="skills">
+  <section class="skills ">
     <!-- Sup Skill -->
-    <div class="sup">
+    <div class=" card sup">
       <h3>Supervisor</h3>
       <p> Monitors activity to identify project roadblocks</p>
       <img src="./images/icon-supervisor.svg" alt="Icons-related-to-topic">
     </div>
 
     <!-- Team , Karma Container -->
-    <div class="tk">
-      <div>
-        <!-- Team skill -->
-        <h3>Team Builder</h3>
-        <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="./images/icon-team-builder.svg" alt="Icons-related-to-topic">
-      </div>
+    <div class="card team">
+      <!-- Team skill -->
+      <h3>Team Builder</h3>
+      <p>Scans our talent network to create the optimal team for your project</p>
+      <img src="./images/icon-team-builder.svg" alt="Icons-related-to-topic">
+    </div>
 
-      <!-- Karma Skill -->
-      <div>
-        <h3>Karma</h3>
-        <p>Regularly evaluates our talent to ensure quality</p>
-        <img src="./images/icon-karma.svg" alt="Icons-related-to-topic">
-      </div>
+    <!-- Karma Skill -->
+    <div class="card karma">
+      <h3>Karma</h3>
+      <p>Regularly evaluates our talent to ensure quality</p>
+      <img src="./images/icon-karma.svg" alt="Icons-related-to-topic">
     </div>
 
     <!-- Cal Skill -->
-    <div class="cal">
+    <div class=" card cal">
       <h3>Calculator</h3>
       <p>Uses data from past projects to provide better delivery estimates</p>
       <img src="./images/icon-calculator.svg" alt="Icons-related-to-topic">
-      
     </div>
   </section>
 </main>
